--- a/EDA_Notebook_3.ipynb
+++ b/EDA_Notebook_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtYZPnFegrLLWBGGPjk8Kf",
+      "authorship_tag": "ABX9TyNl7oLj3txj0Rj4FuaZkrb3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this EDA project, we were provided with the Global Terrorism Database (GTD) which is a database including information on terrorist events around the world from 1970 through 2017. Unlike many other event databases, the GTD includes systematic data on domestic as well as international terrorist incidents that have occurred during this time period and now includes more than 181,000 cases.\n",
+        "In this EDA project, we were provided with the Global Terrorism Dataset (GTD) which is a dataset including information on terrorist events around the world from 1970 through 2017. Unlike many other event databases, the GTD includes systematic data on domestic as well as international terrorist incidents that have occurred during this time period and now includes more than 181,000 cases.\n",
         "\n",
         "In this project we are doing the exploratory data analysis on the global terrorisam database to find out various insights of terrorism activity and their effect over region,country and city. Also we did some visualizations for easy understandings of the analysis.\n",
         "\n",
@@ -6698,7 +6698,7 @@
       "source": [
         "Observation :- 1.Here we did the analysis of most affected country of terrorism India.\n",
         "\n",
-        "2.most number of attacks happen in the Shrinagar city of iraq\n",
+        "2.most number of attacks happen in the Shrinagar city of india\n",
         "\n",
         "3.Communist party of india-Maoist(cpi-Maoist) is the most active terrorist organization in the country which record highest attacks\n",
         "\n",
